--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1405,19 +1405,20 @@ section.search {
 }
 
 form#settled_status {
-    h3 {
-        font-weight: normal;
-    }
     label {
         vertical-align: top;
         padding-top: 0.55rem;
         display: inline-block;
+        cursor: pointer;
+    }
+    p {
+        margin: 0;
     }
 }
 #settled_status_guide {
     color: white;
     font-size: 1.25rem;
-    padding: $unit*0.8 $unit;
+    padding: $unit*0.6 $unit $unit*0.8;
     margin-top: $unit/2;
     border-radius: $unit/5;
     a {
