--- a/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
+++ b/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
@@ -97,7 +97,7 @@
                                 Getting this status will prove (for example, to employers or public service providers) that you have permission to continue living and working here in future.
                             </p>
                             <p>
-                                The application fee will be no more than the cost charged to British citizens for a UK passport and the online process for application should be in place by late 2018. Sign up for email updates for more details.
+                                The application fee will be no more than the cost charged to British citizens for a UK passport and the online process for application should be in place by late 2018. <a href="https://gov.smartwebportal.co.uk/homeoffice/public/webform.asp?id=67&id2=627DF7">Sign up for email updates</a> for more details.
                             </p>
                             <p>
                                 Family members who are living with, or join, you in the UK by 29 March 2019 will also be able to apply for settled status after 5 years in the UK. Close family members (spouses, civil and unmarried partners, dependent children and grandchildren, and dependent parents and grandparents) will be able to join EU citizens after the UK leaves the EU, as long as the relationship existed on 29 March 2019.
