--- a/db/json2/scvo/layouts/default.hbs
+++ b/db/json2/scvo/layouts/default.hbs
@@ -266,7 +266,7 @@
     	data-cookie="CookieInfoScript"
     	data-text-align="left">
     </script>
-    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/scvo/root.js"></script>
+    <script type="text/javascript" src="/assets/js/scvo/root.js"></script>
     <!--{section:foot}-->
 </body>
 </html>
