--- a/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
+++ b/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
@@ -8,7 +8,7 @@
                     {{{data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
 
                     <h3>Quick guide</h3>
-                    <form name="settled_status" id="settled_status" action="">
+                    <form name="settled_status" id="settled_status" action="get">
                         <p>
                             <strong>Q1.</strong> When did you arrive in the UK?
                         </p>
