Changed the settled status form as instructed by Craig

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1415,7 +1415,7 @@ form#settled_status {
         margin: 0;
     }
 }
-#settled_status_guide {
+#settled_status_guide .guide_text {
     color: white;
     font-size: 1.25rem;
     padding: $unit*0.6 $unit $unit*0.8;
@@ -1425,8 +1425,10 @@ form#settled_status {
         color: white;
     }
 }
-#settled_status_guide,
-.guide_text {
+#settled_status_guide .guide_text,
+#settled_status_q_b,
+#settled_status_q_c,
+#settled_status_q_d {
     display: none;
 }
 
