Charter fund menu fix

--- a/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
+++ b/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
@@ -89,7 +89,7 @@
                     <div id="settled_status_guide" class="mdc-elevation--z6">
                         <div class="guide_text" id="guide_2100">
                             <p>
-                                You will be able to apply to stay in the UK until you have reached the five-year threshold.
+                                You will be able to apply to stay in the UK once you have reached the five-year threshold.
                             </p>
                             <p>
                                 Once you have been in the UK continually for five years, you will be able to apply to stay indefinitely by getting 'settled status'. That means you will be free to continue living here and have access to public funds and services.
@@ -139,7 +139,7 @@
                         </div>
                         <div class="guide_text" id="guide_1022">
                             <p>
-                                You will be able to apply to stay in the UK until you have reached the five-year threshold.
+                                You will be able to apply to stay in the UK once you have reached the five-year threshold.
                             </p>
                             <p>
                                 Once you have been in the UK continually for five years, you will be able to apply to stay indefinitely by getting 'settled status'. That means you will be free to continue living here and have access to public funds and services.
