Updated CF menu

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1514,6 +1514,9 @@ form#settled_status {
     padding-top: 15px;
 }
 .mdc-toolbar {
+    .container-fluid {
+        display: flex;
+    }
     #upper-tab-bar,
     .mdc-toolbar__icon,
     .mdc-toolbar__row,
