--- a/db/json2/scvo/templates/events/event-cjs.hbs
+++ b/db/json2/scvo/templates/events/event-cjs.hbs
@@ -12,7 +12,7 @@
         {{{rendered.scvo_full}}}
         {{{rendered.scvo_speakers}}}
         {{/with ~}}
-        <div class="mdc-layout-grid related">
+        <div class="mdc-layout-grid related post-related">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                     {{#compare data.supplimentaryResponses.related_events.hits.total ">" 0 ~}}
