--- a/db/json2/scvo/templates/events/event.hbs
+++ b/db/json2/scvo/templates/events/event.hbs
@@ -16,7 +16,7 @@
 
         {{#compare data.supplimentaryResponses.related_events.hits.total ">" 0 ~}}
         <h2 class="author">Similar events</h2>
-        <div class="mdc-layout-grid related">
+        <div class="mdc-layout-grid related post-related">
             <div class="mdc-layout-grid__inner">
                 {{#each data.supplimentaryResponses.related_events.hits.hits ~}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
