--- a/db/json2/scvo/templates/pages/page-charter-funding.hbs
+++ b/db/json2/scvo/templates/pages/page-charter-funding.hbs
@@ -8,7 +8,7 @@
                     {{{data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
-                    {{> menu_charter_funding}}
+                    {{> menu_digital_participation_charter_funding}}
                 </div>
                 {{> related_posts}}
             </div>
