--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -305,7 +305,7 @@ primary-dark: #251032
             background-color: transparent !important;
         }
         .mdc-button:hover {
-            color: map-get($themeDigital, 'secondary') !important;
+            color: map-get($themeDigital, 'primary') !important;
             background-color: white !important;
         }
     }
