--- a/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
+++ b/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
@@ -8,6 +8,9 @@
                     {{{data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
 
                     <h3>Quick guide</h3>
+                    <p>
+                        <strong>Note:</strong> This information does not constitute as legal advice and merely serves to provide an indication – visit the <a href="https://www.gov.uk/guidance/status-of-eu-nationals-in-the-uk-what-you-need-to-know">Home Office website</a> for more detailed information.
+                    </p>
                     <form name="settled_status" id="settled_status" action="get">
                         <div id="settled_status_q_a">
                             <p>
