--- a/db/json2/scvo/templates/posts/post.hbs
+++ b/db/json2/scvo/templates/posts/post.hbs
@@ -82,7 +82,7 @@
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
                             {{#each data.supplimentaryResponses.tfn_related_posts.hits.hits ~}}
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                 {{{_source.rendered.scvo_gist}}}
                             </div>
                             {{/each ~}}
