--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -3595,6 +3595,13 @@ footer {
             }
         }
     }
+    .post-related {
+        .mdc-card {
+            .mdc-layout-grid__cell--span-3-desktop {
+                display: none;
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 991px) {
@@ -3705,6 +3712,13 @@ footer {
         h2 {
             padding: 0 !important;
             margin: 0 !important;
+        }
+    }
+    .post-related {
+        .mdc-card {
+            .mdc-layout-grid__cell--span-3-desktop {
+                display: inherit;
+            }
         }
     }
     .cjs-search-list .mdc-layout-grid__cell .list {
