--- a/db/json2/scvo/templates/events/event-policy.hbs
+++ b/db/json2/scvo/templates/events/event-policy.hbs
@@ -11,19 +11,6 @@
         {{{rendered.scvo_full}}}
         {{{rendered.scvo_speakers}}}
         {{/with ~}}
-        <div class="mdc-layout-grid related post-related">
-            <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                    {{#compare data.supplimentaryResponses.related_events.hits.total ">" 0 ~}}
-                    <h2 class="author">Similar events</h2>
-                    <ul class="supplimentary-list">
-                        {{#each data.supplimentaryResponses.related_events.hits.hits ~}}
-                        {{{_source.rendered.scvo_list}}}
-                        {{/each ~}}
-                    </ul>
-                    {{/compare ~}}
-                </div>
-            </div>
-        </div>
+        {{> related_events}}
     </div>
 </div>
