Updated SCA text on home page

--- a/db/json2/scvo/templates/pages/home.hbs
+++ b/db/json2/scvo/templates/pages/home.hbs
@@ -168,7 +168,7 @@
                         <div class="mdc-card">
                             <div class="mdc-card-inner">
                                 <h3>
-                                    The Scottish Charity Awards are back for 2018, and we want you to tell us which Scottish charities and individuals had been the best, most innovative and effective during the past year!
+                                    The Scottish Charity Awards are back for 2018!
                                 </h3>
                                 <p>
                                     There are eight award categories – Charity of the Year, Charity Champion, Demonstrating Digital, Pioneering Project, Terrific Trustee, Leading Light, Celebrating Communities and Cracking Campaign – with the winners to be decided by our panel of judges and announced at our awards ceremony on June 14th at the EICC in Edinburgh. <a href="/scottish-charity-awards">Read more</a>
