--- a/db/json2/scvo/templates/pages/home.hbs
+++ b/db/json2/scvo/templates/pages/home.hbs
@@ -44,6 +44,9 @@
                                 <a href="/scottish-charity-awards">Scottish Charity Awards</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                                <a href="/projects-campaigns/datawareness">GDPR</a>
+                            </div>
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                 <a href="/digital">Digital</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
@@ -51,9 +54,6 @@
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                 <a href="/jobs/community-jobs-scotland/information-for-employers/become-an-employer">Become a CJS employer</a>
-                            </div>
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                                <a href="/setting-up-a-charity/write-your-constitution">Write your constitution</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                 <a href="/running-your-organisation/governance/roles-responsibilities">Governance roles & responsibilites</a>
