Added in stuff for TLS

--- a/db/json2/goodmoves/layouts/default.hbs
+++ b/db/json2/goodmoves/layouts/default.hbs
@@ -81,7 +81,7 @@
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
                             <span class="mdc-toolbar__title catalog-title">
                                 <a href="/" class="brand-logo" title="Goodmoves">
-                                    <img src="/assets/images/goodmoves-logo.png" />
+                                  goodmoves
                                 </a>
                             </span>
                         </section>
